# libvcic

./: .clang-format  .clang-tidy  .clangd  .cmake-format.yaml  .gitignore  .pre-commit-config.yaml  .qmlformat.ini  CMakeLists.txt  CMakePresets.json  README.md
cmake/: VCICChecks.cmake  VCICConfig.cmake.in  VCICOptions.cmake  VCICSummary.cmake
docs/: libvcic.md
gui/: CMakeLists.txt  CameraListView.cpp  CameraListView.h  CameraSessionController.cpp  CameraSessionController.h  DiscoveryController.cpp  DiscoveryController.h  LogConsoleView.cpp  LogConsoleView.h  MainWindow.cpp  MainWindow.h  ParameterEditorView.cpp  ParameterEditorView.h  main.cpp
src/vcic-protocol/: CMakeLists.txt
src/vcic-protocol/include/vcic/: IVcicDiscoveryService.h  IVcicMessageCodec.h  VcicCamera.h  VcicCameraInfo.h  VcicDiscoveryServiceV1.h  VcicMessage.h  VcicMessageCodecV1.h
src/vcic-protocol/src/: IVcicDiscoveryService.cpp  VcicCamera.cpp  VcicDiscoveryServiceV1.cpp  VcicMessage.cpp  VcicMessageCodecV1.cpp
src/vcic-transport/: CMakeLists.txt
src/vcic-transport/include/vcic/: ITransport.h  TcpTransport.h  UdpTransport.h
src/vcic-transport/src/: ITransport.cpp  TcpTransport.cpp  UdpTransport.cpp
tests/: CMakeLists.txt  main.cpp
tests/mocks/: MockTransport.cpp  MockTransport.h
